--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global */
+@import url(assets/styles/global/global.css);
+@import url(assets/styles/global/container.css);
+
+/* Vendor */
+
+@import url(assets/vendor/normalize.css);
+@import url(assets/vendor/fonts.css);
+
+/* Ui */
+
+@import url(assets/styles/global/ui/button/button.css);
+@import url(assets/styles/global/ui/title/title.css);
+@import url(assets/styles/global/ui/logo/logo.css);
+
+/* Body */
+
+@import url(assets/styles/body/__wrapper/body__bg.css);
