--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -532,9 +532,8 @@
           </div>
           <div class="products__item-title">Двойной бургер чеддар</div>
           <p class="products__item-text">
-            9 Булочка для бургера, котлета говяжья, грудинка, красный лук,
-            огурец маринованный, томат, кетчуп, двойной сыр чеддар, горчица,
-            зелень
+            Булочка для бургера, котлета говяжья, грудинка, красный лук, огурец
+            маринованный, томат, кетчуп, двойной сыр чеддар, горчица, зелень
           </p>
           <div class="products__item-extra">
             <div class="products__item-info">
@@ -577,18 +576,59 @@
           Заполните все данные и наш менеджер свяжется с вами для подтверждения
           заказа
         </div>
-        <div class="order__form-inputs">
-          <div class="order__form-input">
-            <input type="text" placeholder="Ваш заказ" id="order-burger" />
+        <div class="order__form-inputs" [formGroup]="form">
+          <div
+            class="order__form-input"
+            [class]="{
+              error:
+                (form.get('order')?.invalid && form.get('order')?.dirty) ||
+                form.get('order')?.touched
+            }"
+          >
+            <input
+              type="text"
+              placeholder="Ваш заказ"
+              id="order-burger"
+              formControlName="order"
+            />
           </div>
-          <div class="order__form-input">
-            <input type="text" placeholder="Ваше имя" id="order-name" />
+          <div
+            class="order__form-input"
+            [class]="{
+              error:
+                (form.get('name')?.invalid && form.get('name')?.dirty) ||
+                form.get('name')?.touched
+            }"
+          >
+            <input
+              type="text"
+              placeholder="Ваше имя"
+              id="order-name"
+              formControlName="name"
+            />
           </div>
-          <div class="order__form-input">
-            <input type="text" placeholder="Ваш телефон" id="order-phone" />
+          <div
+            class="order__form-input"
+            [class]="{
+              error:
+                (form.get('phone')?.invalid && form.get('phone')?.dirty) ||
+                form.get('phone')?.touched
+            }"
+          >
+            <input
+              type="text"
+              placeholder="Ваш телефон"
+              id="order-phone"
+              formControlName="phone"
+            />
           </div>
         </div>
-        <button class="button order__button" id="order-action">
+        <button
+          class="button order__button"
+          id="order-action"
+          (click)="confirmOrder()"
+          [disabled]="!form.valid"
+        >
           Оформить заказ
         </button>
       </div>
@@ -597,7 +637,11 @@
 
   <div class="modal visually-hidden" id="modal">
     <p class="modal__text">Спасибо за покупку</p>
-    <button class="button modal__button" id="button-modal-close">
+    <button
+      class="button modal__button"
+      id="button-modal-close"
+      (click)="closeModal()"
+    >
       Закрыть
     </button>
   </div>
