--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,429 +116,23 @@
     <div class="container products__container">
       <div class="title">Выберете свой бургер</div>
       <ul class="products__items">
-        <li class="products__item">
+        <li class="products__item" *ngFor="let product of productsData">
           <div class="products__item-img">
             <img
-              src="../assets/images/main/products/Burger_1.png"
-              alt="Бургер чеддер и бекон"
+              src="../assets/images/main/products/{{ product.image }}"
+              alt="{{ product.title }}"
             />
           </div>
-          <div class="products__item-title">Бургер чеддер & бекон</div>
+          <div class="products__item-title">{{ product.title }}</div>
           <p class="products__item-text">
-            Котлета из говядины криспи, булочка, томат, сыр Чеддер, грудинка,
-            лук красный, салат айсбер, майонез, кетчуп, сырный соус
+            {{ product.text }}
           </p>
           <div class="products__item-extra">
             <div class="products__item-info">
-              <p class="products__item-price" data-base-price="8">8 $</p>
-              <p class="products__item-weight">360 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_2.png"
-              alt="BBQ с беконом и курицей"
-            />
-          </div>
-          <div class="products__item-title">BBQ с беконом и курицей</div>
-          <p class="products__item-text">
-            Булочка бриошь с кунжутом, куриная котлета, сыр чеддер, томат,
-            огурец маринованный, лук маринованный, салат Ромен, бекон, соус BBQ
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="7">7 $</p>
-              <p class="products__item-weight">390 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_3.png"
-              alt="Дабл биф бургер"
-            />
-          </div>
-          <div class="products__item-title">Дабл биф бургер</div>
-          <p class="products__item-text">
-            Две говяжьи котлеты, сыр чеддер, салат романо, маринованные огурцы,
-            свежий томат, бекон, красный лук, соус бургер, горчица
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="10">10 $</p>
-              <p class="products__item-weight">420 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_4.png"
-              alt="Баварский бургер"
-            />
-          </div>
-          <div class="products__item-title">Баварский бургер</div>
-          <p class="products__item-text">
-            Булочка для бургера, говяжья котлета, красный лук, сыр, охотничья
-            колбаска, соус барбекю, соус сырный, салат айсберг
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="7">7 $</p>
-              <p class="products__item-weight">220 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_5.png"
-              alt="Бекон чизбургер"
-            />
-          </div>
-          <div class="products__item-title">Бекон чизбургер</div>
-          <p class="products__item-text">
-            Булочка для бургера, говяжья котлета, грудинка, помидор, огурец
-            маринованный, сыр, сырный соус, кетчуп, зелень
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="8">8 $</p>
-              <p class="products__item-weight">220 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_6.png"
-              alt="Индиана бургер"
-            />
-          </div>
-          <div class="products__item-title">Индиана бургер</div>
-          <p class="products__item-text">
-            Булочка для бургера, котлета куриная, грудинка, яйцо, огурец
-            маринованный, криспи лук, кетчуп, соус сырный, горчица, зелень
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="8">8 $</p>
-              <p class="products__item-weight">320 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_7.png"
-              alt="Вегги бургер"
-            />
-          </div>
-          <div class="products__item-title">Вегги бургер</div>
-          <p class="products__item-text">
-            Булочка для бургера, вегетарианская котлета, красный лук, сыр,
-            свежий томат, соус барбекю, соус сырный, салат айсберг
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="8">8 $</p>
-              <p class="products__item-weight">280 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_8.png"
-              alt="Вегги бургер"
-            />
-          </div>
-          <div class="products__item-title">Плаксивый Джо</div>
-          <p class="products__item-text">
-            Булочка для бургера, говяжья котлета, грудинка, помидор, огурец
-            маринованный, красный лук, сыр, перец халапеньо, кетчуп, зелень
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="7">7 $</p>
-              <p class="products__item-weight">380 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_9.png"
-              alt="Двойной чиз бургер"
-            />
-          </div>
-          <div class="products__item-title">Двойной чиз бургер</div>
-          <p class="products__item-text">
-            Булочка для бургера, две говяжьи котлеты, двойной сыр чеддар, огурец
-            маринованный, криспи лук, кетчуп, соус сырный, горчица, зелень
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="11">11 $</p>
-              <p class="products__item-weight">400 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_10.png"
-              alt="Фрешбургер"
-            />
-          </div>
-          <div class="products__item-title">Фрешбургер</div>
-          <p class="products__item-text">
-            Булочка для бургера, говяжья котлета, бекон, сыр чеддар, яйцо,
-            салями, соус барбекю, соус сырный, салат айсберг, свежий томат
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="9">9 $</p>
-              <p class="products__item-weight">300 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_11.png"
-              alt="Цуккини бургер"
-            />
-          </div>
-          <div class="products__item-title">Цуккини бургер</div>
-          <p class="products__item-text">
-            Булочка для бургера, вегетарианская котлета из нута, цуккини на
-            гриле, помидор, огурец маринованный, сыр, горчичный соус, кетчуп,
-            зелень
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="8">8 $</p>
-              <p class="products__item-weight">320 гр</p>
-            </div>
-            <div class="products__item-action">
-              <button class="button products__button" (click)="scrollTo(order)">
-                <span>Заказать</span>
-                <span
-                  ><svg
-                    xmlns="../assets/http://www.w3.org/2000/svg"
-                    width="24"
-                    height="25"
-                    fill="none"
-                  >
-                    <path
-                      fill="#191411"
-                      d="M17 18.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4ZM1 2.5h3.27l.94 2H20a1 1 0 0 1 1 1c0 .17-.05.34-.12.5l-3.58 6.47c-.34.61-1 1.03-1.75 1.03H8.1l-.9 1.63-.03.12a.25.25 0 0 0 .25.25H19v2H7a2 2 0 0 1-1.76-2.96l1.36-2.45L3 4.5H1v-2Zm6 16a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm9-7 2.78-5H6.14l2.36 5H16Z"
-                    /></svg
-                ></span>
-              </button>
-            </div>
-          </div>
-        </li>
-
-        <li class="products__item">
-          <div class="products__item-img">
-            <img
-              src="../assets/images/main/products/Burger_12.png"
-              alt="Цуккини бургер"
-            />
-          </div>
-          <div class="products__item-title">Двойной бургер чеддар</div>
-          <p class="products__item-text">
-            Булочка для бургера, котлета говяжья, грудинка, красный лук, огурец
-            маринованный, томат, кетчуп, двойной сыр чеддар, горчица, зелень
-          </p>
-          <div class="products__item-extra">
-            <div class="products__item-info">
-              <p class="products__item-price" data-base-price="9">9 $</p>
-              <p class="products__item-weight">360 гр</p>
+              <p class="products__item-price" data-base-price="8">
+                {{ product.price }} $
+              </p>
+              <p class="products__item-weight">{{ product.grams }} гр</p>
             </div>
             <div class="products__item-action">
               <button class="button products__button" (click)="scrollTo(order)">
